add UpcomingCourse
