# app/Http/Resources/UpcomingCourseResource.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class UpcomingCourseResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id'=>$this->id,
+            'title'=>$this->title,
+            'description'=>$this->description,
+            'img'=>$this->img,
+            'course_date'=>$this->course_date,
+        ];
+    }
+}
