# storage/api-docs/api-docs.json
@@ -1140,6 +1140,130 @@
                 }
             }
         },
+        "/upcoming-courses": {
+            "get": {
+                "tags": [
+                    "Upcoming Courses"
+                ],
+                "summary": "Get all upcoming courses",
+                "description": "Retrieve a list of all upcoming courses",
+                "operationId": "getUpcomingCourses",
+                "responses": {
+                    "200": {
+                        "description": "List of upcoming courses retrieved successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/UpcomingCourse"
+                                            }
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Retrieved successfully"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "An error occurred"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/upcoming-courses/{id}": {
+            "get": {
+                "tags": [
+                    "Upcoming Courses"
+                ],
+                "summary": "Get details of a specific upcoming course",
+                "description": "Retrieve details of an upcoming course by its ID",
+                "operationId": "getUpcomingCourse",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the upcoming course",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Upcoming course details retrieved successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/UpcomingCourse"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Retrieved successfully"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Upcoming course not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Course not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "An error occurred"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/venue": {
             "get": {
                 "tags": [
@@ -1387,6 +1511,53 @@
                 },
                 "type": "object"
             },
+            "UpcomingCourse": {
+                "title": "UpcomingCourse",
+                "description": "Schema for an upcoming course",
+                "properties": {
+                    "id": {
+                        "description": "Unique identifier for the course",
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "course_date": {
+                        "description": "The date of the course",
+                        "type": "string",
+                        "format": "date",
+                        "example": "2024-01-01"
+                    },
+                    "title": {
+                        "description": "Title of the course",
+                        "type": "string",
+                        "example": "Introduction to Programming"
+                    },
+                    "img": {
+                        "description": "URL of the course image (optional)",
+                        "type": "string",
+                        "format": "url",
+                        "example": "https://example.com/images/course.jpg",
+                        "nullable": true
+                    },
+                    "description": {
+                        "description": "Detailed description of the course",
+                        "type": "string",
+                        "example": "This course provides an introduction to programming concepts using Python."
+                    },
+                    "created_at": {
+                        "description": "Timestamp when the course was created",
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-01-01T12:34:56Z"
+                    },
+                    "updated_at": {
+                        "description": "Timestamp when the course was last updated",
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-01-02T15:45:30Z"
+                    }
+                },
+                "type": "object"
+            },
             "PlanRegister": {
                 "description": "Plan register model",
                 "properties": {
@@ -1478,6 +1649,10 @@
         {
             "name": "Training Plans",
             "description": "Training Plans"
+        },
+        {
+            "name": "Upcoming Courses",
+            "description": "Upcoming Courses"
         },
         {
             "name": "Venues",
